clusters/east/istio-system-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    topology.istio.io/network: network-east
